<!-- MainActivity布局 -->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.aiyou" >

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/background_welcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <com.aiyou.view.IUWidget
            android:id="@+id/iu_iu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="onClick"
            android:visibility="gone"
            app:contentBackground="#400a"
            app:contentTextColor="#fff"
            app:tagBackground="@drawable/background_bless_iu_tv"
            app:tagText="@string/bless_iu"
            app:tagTextColor="#0ff"
            app:titleBackground="#400a"
            app:titleTextColor="#0ff" />

        <com.aiyou.view.IUWidget
            android:id="@+id/iu_bless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:onClick="onClick"
            android:visibility="gone"
            app:contentBackground="#4a00"
            app:contentTextColor="#fff"
            app:tagBackground="@drawable/background_bless_tv"
            app:tagText="@string/bless"
            app:tagTextColor="#ff0"
            app:titleBackground="#4a00"
            app:titleTextColor="#ff0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="50dp"
        android:background="#00ffffff"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#cce48833"
            android:gravity="center_horizontal"
            android:onClick="onLabelClick"
            android:orientation="vertical"
            android:rotationY="270" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/main_news" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/main_news"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bbs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#aa5555ff"
            android:gravity="center_horizontal"
            android:onClick="onLabelClick"
            android:orientation="vertical"
            android:rotationY="270" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/main_bbs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/main_bbs"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#88ee00ee"
            android:gravity="center_horizontal"
            android:onClick="onLabelClick"
            android:orientation="vertical"
            android:rotationY="270" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/main_map" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/main_map"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#aa888888"
            android:gravity="center_horizontal"
            android:onClick="onLabelClick"
            android:orientation="vertical"
            android:rotationY="270" >

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/main_set" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/main_set"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/iu_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="onClick"
        android:visibility="gone" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="#00000000"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/tv_iu_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_rect_day"
                    android:clickable="true"
                    android:gravity="left"
                    android:onClick="onClick"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/other_about"
                    android:textColor="#000"
                    android:textSize="17sp" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5555cc"
        android:clickable="true"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="150dp"
            android:text="@string/xiaoxun"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/version"
            android:textColor="#fff" />
    </FrameLayout>

</merge>